fix: 위치 검색 버그 수정
- 도 등 다양한 방식의 표현으로 검색한 결과가 다르게 저장되는 문제가 있어서 해결함(경기도 군포시-> 경기 군포시)